Mon Jul  8 02:26:07 BST 2013  Colin Watson  <cjwatson@debian.org>

	* man/man1/whatis.man1 (NAME): Clarify that whatis displays one-line
	  descriptions, rather than e.g. the contents of DESCRIPTION
	  sections (Debian bug #713992).

Mon Jul  8 02:15:52 BST 2013  Colin Watson  <cjwatson@debian.org>

	Reimplement 'apropos --and' in a way that works with the
	optimisations introduced in 2.6.2 (Debian bug #678670).

	* src/whatis.c (any_set, all_set): New functions.
	  (parse_name, parse_whatis): Take an additional found_here
	  parameter and set its elements.  Return void.
	  (do_apropos): Combine results from parse_name and parse_whatis
	  properly according to whether --and is set, rather than relying on
	  counters that will only ever coincidentally match the number of
	  search keywords.
	  (main): Remove apropos_seen hash table.
	* NEWS: Document this.

Mon Jul  8 01:30:56 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/man.c (format_display): Simplify using xasprintf.
	* src/whatis.c (do_apropos): Likewise.

Mon Jul  8 00:29:00 BST 2013  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/zh_CN.po: Fix po4a syntax errors.

Sun Jul  7 22:53:02 BST 2013  Wylmer Wang  <wantinghard@gmail.com>

	* man/po4a/po/zh_CN.po: Update from Translation Project.

Fri Jun 28 06:13:17 BST 2013  Colin Watson  <cjwatson@debian.org>

	* lib/encodings.c (find_charset_locale): Attempt fallback locales
	  even if /usr/share/i18n/SUPPORTED exists.  (It may exist but none
	  of the UTF-8 locales mentioned it in may be present; nevertheless,
	  C.UTF-8 may be available.)

Thu Jun 27 11:38:56 BST 2013  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.5.

Thu Jun 27 11:34:40 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Allocate buf on the heap, as 32768 bytes may
	  be too large for some stacks.  Reported by Coverity via Peter
	  Schiffer.

Thu Jun 27 10:47:13 BST 2013  Colin Watson  <cjwatson@debian.org>
